# django_makeupcls

./: .gitignore  README.md  pyproject.toml
config/: urls.py
config/settings/: base.py
users/: models.py
