[tool.poetry]
name = "django-makeup"
version = "0.1.0"
description = ""
authors = ["hyo00000 <gywkdk80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
